@@ -1,0 +1,5 @@
+Result: 
+  Size (input, output): 3, 8
+  X: [3](0,0,0)
+  Value: [8](0,0,0,0,0,0,0,0)
+  Lambda: [0]()
